Make header position:fixed on mobile

--- a/app/angular/app/styles/_layout.scss
+++ b/app/angular/app/styles/_layout.scss
@@ -14,12 +14,17 @@ body {
 
 .header {
   background: $cm-green;
+  left: 0%;
+  top: 0%;
+  position: absolute;
+  position: fixed;
   height: 100%;
+  width: 100%;
   padding-top: .5em;
   padding-bottom: 2em;
   padding-left:  .5em ;
   padding-right: .5em;
-  width: 100%;
+  z-index: 100;
 }
 
 .header-identity {
