--- a/app/angular/app/styles/_layoutmq.scss
+++ b/app/angular/app/styles/_layoutmq.scss
@@ -15,10 +15,10 @@
   }
 
   .header {
-    left: 0%;
-    z-index: 100;
-    position: absolute;
-    position: fixed;
+    // left: 0%;
+    // z-index: 100;
+    // position: absolute;
+    // position: fixed;
 
     padding: 0;
 
